--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -54,7 +54,7 @@
     "                                            plot_opts={'violin_fc':s[2], 'label_fontsize':20})\n",
     "    ax.tick_params(axis='both', which='major', labelsize=15)\n",
     "    ax.set_title(f'{varname}', fontsize=20)\n",
-    "    plt.savefig(f\"violin_{varname}.svg\", format=\"svg\")\n"
+    "    #plt.savefig(f\"violin_{varname}.svg\", format=\"svg\")\n"
    ]
   },
   {
@@ -423,7 +423,7 @@
     "    ax[2].set_xlabel('')\n",
     "    ax[2].set_ylabel('')\n",
     "    fig.tight_layout()\n",
-    "    fig.savefig(f'{varname}_qqplot.svg', format='svg')"
+    "    #fig.savefig(f'{varname}_qqplot.svg', format='svg')"
    ]
   },
   {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -543,28 +543,36 @@
       "BartlettResult(statistic=2.345538763793991, pvalue=0.3095086057549126)\n",
       "BartlettResult(statistic=3.5366167344303716, pvalue=0.1706213735453947)\n",
       "BartlettResult(statistic=5.394600428631725, pvalue=0.06738719836671052)\n",
-      "LeveneResult(statistic=0.45165104751333773, pvalue=0.637653896518297)\n",
-      "BartlettResult(statistic=1.1761174862945942, pvalue=0.5554044215359728)\n",
-      "LeveneResult(statistic=1.1727458610909578, pvalue=0.31303760795903707)\n"
+      "BartlettResult(statistic=1.1761174862945942, pvalue=0.5554044215359728)\n"
      ]
     }
    ],
    "source": [
     "print(bartlett(data['W0CBT1'], data['W2CBT1'], data['W8CBT1']))\n",
     "print(bartlett(data['W0CBT2'], data['W2CBT2'], data['W8CBT2']))\n",
-    "#pro CBT3 a IOP pro jistotu i leveneho test\n",
     "print(bartlett(data['W0CBT3'], data['W2CBT3'], data['W8CBT3']))\n",
-    "print(levene(data['W0CBT3'], data['W2CBT3'], data['W8CBT3']))\n",
-    "print(bartlett(data['W0IOP'], data['W2IOP'], data['W8IOP']))\n",
-    "print(levene(data['W0IOP'], data['W2IOP'], data['W8IOP']))"
+    "print(bartlett(data['W0IOP'], data['W2IOP'], data['W8IOP']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LeveneResult(statistic=0.45165104751333773, pvalue=0.637653896518297)\n",
+      "LeveneResult(statistic=1.1727458610909578, pvalue=0.31303760795903707)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pro CBT3 a IOP pro jistotu i leveneho test\n",
+    "print(levene(data['W0CBT3'], data['W2CBT3'], data['W8CBT3']))\n",
+    "print(levene(data['W0IOP'], data['W2IOP'], data['W8IOP']))"
+   ]
   },
   {
    "attachments": {},
@@ -576,117 +584,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import f_oneway\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "F_onewayResult(statistic=1.6034532487960695, pvalue=0.20548094820898874)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_oneway(data['W0CBT1'], data['W2CBT1'], data['W8CBT1'])\n",
-    "#vraci F statistiku a p-value\n",
-    "#nezamitame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "F_onewayResult(statistic=0.13787372965673342, pvalue=0.8713465003819377)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_oneway(data['W0CBT2'], data['W2CBT2'], data['W8CBT2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "F_onewayResult(statistic=0.044601251790581296, pvalue=0.9563946065510294)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_oneway(data['W0CBT3'], data['W2CBT3'], data['W8CBT3'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "F_onewayResult(statistic=9.428941046017375, pvalue=0.00015726878988166982)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_oneway(data['W0IOP'], data['W2IOP'], data['W8IOP'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from scipy.stats import f_oneway\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_onewayResult(statistic=1.6034532487960695, pvalue=0.20548094820898874)\n",
+      "F_onewayResult(statistic=0.13787372965673342, pvalue=0.8713465003819377)\n"
+     ]
+    }
+   ],
    "source": [
-    "long_data = pd.melt(data, value_vars=['W0CBT1', 'W2CBT1', 'W8CBT1'], var_name='Class', value_name='Value')\n"
+    "#klasickou ANOVu můžeme použít jenom na CBT1 a CBT2\n",
+    "print(f_oneway(data['W0CBT1'], data['W2CBT1'], data['W8CBT1'])) #vraci F statistiku a p-value\n",
+    "print(f_oneway(data['W0CBT2'], data['W2CBT2'], data['W8CBT2']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -741,38 +670,94 @@
        "Residual  2.076167  120.0       NaN       NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "long_data = pd.melt(data, value_vars=['W0CBT1', 'W2CBT1', 'W8CBT1'], var_name='Class', value_name='Value')\n",
+    "model = ols('Value ~ Class', data=long_data).fit()\n",
+    "anova_table = sm.stats.anova_lm(model, typ=2)\n",
+    "anova_table\n",
+    "#class-mezi tridami\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Class</th>\n",
+       "      <td>0.002721</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.137874</td>\n",
+       "      <td>0.871347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>1.184230</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            sum_sq     df         F    PR(>F)\n",
+       "Class     0.002721    2.0  0.137874  0.871347\n",
+       "Residual  1.184230  120.0       NaN       NaN"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "long_data = pd.melt(data, value_vars=['W0CBT2', 'W2CBT2', 'W8CBT2'], var_name='Class', value_name='Value')\n",
     "model = ols('Value ~ Class', data=long_data).fit()\n",
     "anova_table = sm.stats.anova_lm(model, typ=2)\n",
     "anova_table"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "W0CBT1    0.669659\n",
-       "W2CBT1    0.637878\n",
-       "W8CBT1    0.618098\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data[['W0CBT1', 'W2CBT1', 'W8CBT1']].mean()"
+    "### Kruskal-Wallis"
    ]
   },
   {
@@ -786,42 +771,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KruskalResult(statistic=0.2771326787347827, pvalue=0.8706054939356299)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KruskalResult(statistic=0.2771326787347827, pvalue=0.8706054939356299)\n",
+      "KruskalResult(statistic=14.962233510260296, pvalue=0.0005636276299327339)\n"
+     ]
     }
    ],
    "source": [
-    "kruskal(data['W0CBT3'], data['W2CBT3'], data['W8CBT3'])"
+    "print(kruskal(data['W0CBT3'], data['W2CBT3'], data['W8CBT3']))\n",
+    "print(kruskal(data['W0IOP'], data['W2IOP'], data['W8IOP']))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "KruskalResult(statistic=14.962233510260296, pvalue=0.0005636276299327339)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "kruskal(data['W0IOP'], data['W2IOP'], data['W8IOP'])"
+    "#### vícenásobné porovnávání"
    ]
   },
   {
@@ -835,16 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tukey_iop = tukey_hsd(data['W0IOP'], data['W2IOP'], data['W8IOP'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -864,26 +827,16 @@
     }
    ],
    "source": [
-    "print(tukey_iop)"
+    "tukey_iop = tukey_hsd(data['W0IOP'], data['W2IOP'], data['W8IOP'])\n",
+    "print(tukey_iop) #1 a 2 stejné means, ale nula má jiný mean"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#1 a 2 stejné means, ale nula má jiný mean\n",
-    "#upper a lower CI jsou konfidencni intervaly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t-test pro overeni, 0 a 1 a 0 a 2"
+    "#### párový t-test"
    ]
   },
   {
@@ -897,42 +850,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ttest_relResult(statistic=4.154679245582483, pvalue=0.00016639401908025703)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ttest_relResult(statistic=4.154679245582483, pvalue=0.00016639401908025703)\n",
+      "Ttest_relResult(statistic=5.868550902239969, pvalue=7.233452154475577e-07)\n"
+     ]
     }
    ],
    "source": [
-    "ttest_rel(data['W0IOP'], data['W2IOP'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_relResult(statistic=5.868550902239969, pvalue=7.233452154475577e-07)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ttest_rel(data['W0IOP'], data['W8IOP'])"
+    "print(ttest_rel(data['W0IOP'], data['W2IOP']))\n",
+    "print(ttest_rel(data['W0IOP'], data['W8IOP']))"
    ]
   },
   {
@@ -954,6 +886,7 @@
     }
    ],
    "source": [
+    "#boxplot IOP po odstranění odlehlých pozorování, vidíme že hodnoty IOP se snižují\n",
     "generate_violin('IOP')"
    ]
   }
